# claynds

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
cmake/: ClayNDSConfig.cmake.in
examples/: CMakeLists.txt  minimal.c
include/: claynds.h
